--- a/Test02/Views/KhachHang/ThongTinDL.cshtml
+++ b/Test02/Views/KhachHang/ThongTinDL.cshtml
@@ -37,28 +37,6 @@
             });
         </script>
     }
-
-    @*if (TempData["errorPhone"] != null)
-    {
-        <script>
-            swal({
-                title: "Không thể cập nhật số điện thoại này, vì số điện thoại này đã được sử dụng",
-                icon: "warning",
-                button: "Thoát",
-            });
-        </script>
-    }
-
-    if (TempData["errorEmail"] != null)
-    {
-        <script>
-            swal({
-                title: "Không thể cập nhật email này, vì email này đã được sử dụng",
-                icon: "warning",
-                button: "Thoát",
-            });
-        </script>
-    }*@
     
     if (TempData["errorEmailPhone"] != null)
     {
@@ -70,8 +48,6 @@
             });
         </script>
     }
-
-
 }
 
 <div class="row">
@@ -90,8 +66,8 @@
                             @Html.HiddenFor(model => model.MaLoaiDL)
                             @Html.HiddenFor(model => model.UserName)
                             @Html.HiddenFor(model => model.Password)*@
-                            @*@Html.HiddenFor(model => model.HinhAnh)*@
-                        @Html.HiddenFor(model => model.NgayTao)
+                            @Html.HiddenFor(model => model.HinhAnh)
+                            @Html.HiddenFor(model => model.NgayTao)
 
                         <div style="text-align: center;">
                             @if (Model.HinhAnh == null)
@@ -100,13 +76,13 @@
                             }
                             else
                             {
-                                @*<img id="preview1" class="img-avatar" style="visibility:visible;" src="@Model.HinhAnh" />*@
-                                <img id="preview" class="img-avatar" style="visibility: visible;" src="@Model.HinhAnh" />
+                                //<img id="preview" class="img-avatar" style="visibility: visible;" src="@Model.HinhAnh" />
+                                <img class="img-avatar" src="@Model.HinhAnh" />
                             }
                         </div>
                         <div style="margin-top: 20px;">
-                            @Html.TextBox("HinhAnh", "", new { type = "file", @class = "form-control text-center text-danger" })
-                            @*<input type="file" name="HinhAnh" style="width: 80px;" />*@
+                            @*@Html.TextBox("HinhAnh", "", new { type = "file", @class = "form-control text-center text-danger" })*@
+                            <input type="file" name="HinhAnh" style="width: 80px;" />
                         </div>
                     </div>
 
@@ -167,13 +143,13 @@
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script src="Scripts/jquery-1.4.1.js" type="text/javascript"></script>
 <script type="text/javascript">
-    HinhAnh.onchange = evt => {
-        const [file] = HinhAnh.files
-        if (file) {
-            preview.src = URL.createObjectURL(file);
-            document.getElementById("preview").style.visibility = "visible";
-        }
-    }
+    //HinhAnh.onchange = evt => {
+    //    const [file] = HinhAnh.files
+    //    if (file) {
+    //        preview.src = URL.createObjectURL(file);
+    //        document.getElementById("preview").style.visibility = "visible";
+    //    }
+    //}
         function EmailCheck() {
             $("#mess").html("check ...");
             $.post("@Url.Action("CheckEmailAvailability", "LoginDL")",
