Update_ KinhDoanh_SP

--- a/Test02/Views/KinhDoanh/ChinhSuaSP.cshtml
+++ b/Test02/Views/KinhDoanh/ChinhSuaSP.cshtml
@@ -47,7 +47,8 @@
                                 <label class="control-label">Đơn vị tính</label>
                                 <select class="form-control" name="DonViTinh" required>
                                     <option selected disabled value="@Model.DonViTinh">-----@Model.DonViTinh-----</option>
-                                    <option value="Thùng">Thùng</option>
+                                    <option value="Thùng_Lon">Thùng_Lon</option>
+                                    <option value="Thùng_Chai">Thùng_Chai</option>
                                     <option value="Lốc">Lốc</option>
                                     <option value="Lon">Lon</option>
                                     <option value="Chai">Chai</option>
