--- a/Test02/Views/KinhDoanh/QuanLyDH.cshtml
+++ b/Test02/Views/KinhDoanh/QuanLyDH.cshtml
@@ -177,15 +177,21 @@
                                                         @item.TinhTrangGH
                                                     </td>
                                                     <td data-exclude="true">
-                                                        <a href="/KinhDoanh/ChinhSuaDH/@item.MaDH" class="btn btn-primary btn-sm edit">
-                                                            <i class="fa fa-edit"></i>
-                                                        </a> ||
+                                                        @{
+                                                            if (item.TrangThai == "Chưa xử lý")
+                                                            {
+                                                                <a href="/KinhDoanh/ChinhSuaDH/@item.MaDH" class="btn btn-primary btn-sm edit">
+                                                                    <i class="fa fa-edit"></i>
+                                                                </a> 
+                                                            }
+                                                        }
+
                                                         @*<a href="/KinhDoanh/ChinhSuaCTDH/@item.MaDH" class="btn btn-outline-primary btn-sm edit">
                                                                 <i class="fas fa-edit"></i>
                                                             </a> ||*@
                                                         <a href="/KinhDoanh/XoaDH/@item.MaDH" class="btn btn-primary btn-sm trash">
                                                             <i class="fas fa-trash-alt"></i>
-                                                        </a> ||
+                                                        </a> 
                                                         <a href="/KinhDoanh/DanhSachCTDH/@item.MaDH" class="btn btn-primary btn-sm edit">
                                                             <i class="fas fa-train"></i>
                                                         </a>
@@ -409,15 +415,12 @@
                                                             @item.TinhTrangGH
                                                         </td>
                                                         <td data-exclude="true">
-                                                            <a href="/KinhDoanh/ChinhSuaDH/@item.MaDH" class="btn btn-primary btn-sm edit">
-                                                                <i class="fa fa-edit"></i>
-                                                            </a> ||
                                                             @*<a href="/KinhDoanh/ChinhSuaCTDH/@item.MaDH" class="btn btn-outline-primary btn-sm edit">
                                                                     <i class="fas fa-edit"></i>
                                                                 </a> ||*@
                                                             <a href="/KinhDoanh/XoaDH/@item.MaDH" class="btn btn-primary btn-sm trash">
                                                                 <i class="fas fa-trash-alt"></i>
-                                                            </a> ||
+                                                            </a> 
                                                             <a href="/KinhDoanh/DanhSachCTDH/@item.MaDH" class="btn btn-primary btn-sm edit">
                                                                 <i class="fas fa-train"></i>
                                                             </a>
@@ -499,7 +502,7 @@
                 <div class="modal-footer ">
                     <div class="row">
                         <div class="col-lg-12">
-                            <input class="btn btn-add" id="themsp"  type="button" disabled value="Thêm SP" onclick="themSP()" required />
+                            <input class="btn btn-add" id="themsp" type="button" disabled value="Thêm SP" onclick="themSP()" required />
                             <input class="btn btn-cancel" id="xoasp" type="button" name="DiemGiao" disabled value="Xóa SP" onclick="xoaSP()" required />
                         </div>
                         <div style="text-align:end" class="col-lg-12">
@@ -601,7 +604,7 @@
                 document.body.innerHTML = "";
             }
         </script>*@
-<script>
+    <script>
         //Check người dùng phải chọn mã đại lý trước khi thực hiện thêm
         $("#MaDL").change(function () {
             var check = $("#MaDL").val();
@@ -817,5 +820,5 @@
                 }
             });
         }
-</script>
+    </script>
 }
