Update DL (Tìm kiếm và phân trang) 21/04/23

--- a/Test02/Views/KhachHang/Layout/_LayoutKhachHang.cshtml
+++ b/Test02/Views/KhachHang/Layout/_LayoutKhachHang.cshtml
@@ -95,6 +95,12 @@
                 </a>
             </li>
             <li>
+                <a class="app-menu__item @ViewBag.cn" href="~/KhachHang/DoanhSo">
+                    <i class="app-menu__icon bx bx-money-withdraw"></i>
+                    <span class="app-menu__label">Doanh số</span>
+                </a>
+            </li>
+            <li>
                 <a class="app-menu__item @ViewBag.lh" href="~/KhachHang/LienHe">
                     <i class="app-menu__icon bx bxs-message-dots"></i>
                     <span class="app-menu__label">Liên hệ</span>
