--- a/Test02/Views/KhachHang/GioHangDL.cshtml
+++ b/Test02/Views/KhachHang/GioHangDL.cshtml
@@ -7,6 +7,17 @@
     ViewBag.nd = "Trang giỏ hàng";
     //<script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
 
+    if (TempData["GHNull"] != null)
+    {
+        <script>
+            swal({
+                title: "Vui lòng chọn sản phẩm",
+                icon: "warning",
+                button: "Thoát",
+            });
+        </script>
+    }
+
     if (TempData["XoaSP"] != null)
     {
         <script>
@@ -83,18 +94,18 @@
                                     </td>
                                     <td style="width: 150px;">
                                         @using (Html.BeginForm("CapNhatSL", "KhachHang"))
-                                            {
-                                                <input type="hidden" value="@item.idSP.MaSP" name="MaSP" />
-                                                <div style="display: flex;">
-                                                    <input class="form-control" type="number" value="@item.soLuong" name="soluong" style="width: 150px;" />
-                                                    <input class="btn btn-success" type="submit" value="Cập nhật" />
-                                                </div>
-                                            }
+                                        {
+                                            <input type="hidden" value="@item.idSP.MaSP" name="MaSP" />
+                                            <div style="display: flex;">
+                                                <input class="form-control" type="number" value="@item.soLuong" name="soluong" style="width: 150px;" />
+                                                <input class="btn btn-success" type="submit" value="Cập nhật" />
+                                            </div>
+                                        }
                                         @*<div style="display: flex;">
-                                            <div id="sllon"></div>
-                                            <div id="slbe"></div>
-                                            <input class="form-control quantity" type="number" min="1" max="@item.idSP.TongTon" id="quantity-@item.idSP" name="quantity" value="@item.soLuong" style="width: 150px;" data-product-id="@item.idSP.MaSP" />
-                                        </div>*@
+                                                <div id="sllon"></div>
+                                                <div id="slbe"></div>
+                                                <input class="form-control quantity" type="number" min="1" max="@item.idSP.TongTon" id="quantity-@item.idSP" name="quantity" value="@item.soLuong" style="width: 150px;" data-product-id="@item.idSP.MaSP" />
+                                            </div>*@
                                     </td>
                                     <td class="thanhtien" id="thanhtien-@item.idSP.MaSP" style="text-align: center">
 
@@ -158,23 +169,23 @@
     </div>
 </div>
 
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script src="Scripts/jquery-1.4.1.js" type="text/javascript"></script>
-<script type="text/javascript">
-    $(document).ready(function () {
-        $('.quantity').change(function () {
-            var quantity = $(this).val();
-            var productId = $(this).data('product-id');
+@*<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="Scripts/jquery-1.4.1.js" type="text/javascript"></script>*@
+@*<script type="text/javascript">
+        $(document).ready(function () {
+            $('.quantity').change(function () {
+                var quantity = $(this).val();
+                var productId = $(this).data('product-id');
 
-            $.ajax({
-                url: '/KhachHang/CapNhatSL',
-                type: 'POST',
-                data: { MaSP: productId, soluong: quantity },
-                success: function (result) {
-                    $('#tongtien').text(result.tongTien);
-                    $('#thanhtien-' + productId).text(result.thanhTien);
-                }
+                $.ajax({
+                    url: '/KhachHang/CapNhatSL',
+                    type: 'POST',
+                    data: { MaSP: productId, soluong: quantity },
+                    success: function (result) {
+                        $('#tongtien').text(result.tongTien);
+                        $('#thanhtien-' + productId).text(result.thanhTien);
+                    }
+                });
             });
         });
-    });
-</script>
+    </script>*@
