--- a/Test02/Views/KhachHang/PageSanPham.cshtml
+++ b/Test02/Views/KhachHang/PageSanPham.cshtml
@@ -1,4 +1,7 @@
-﻿@model IEnumerable<Test02.Models.SanPham>
+﻿@*@model IEnumerable<Test02.Models.SanPham>*@
+@using Test02.Models
+@using PagedList.Mvc
+@model PagedList.PagedList<SanPham>
 @{
     ViewBag.Title = "PageSanPham";
     Layout = "~/Views/KhachHang/Layout/_LayoutKhachHang.cshtml";
@@ -42,9 +45,16 @@
 }
 <div class="row">
     <div class="col-md-12">
-        <div class="tile">
-            <h3 class="tile-title">DANH SÁCH SẢN PHẨM</h3>
-            <div class="tile-body table-responsive">
+        <div class="tile table-responsive">
+            <div class="tile-title form-group" style="display: flex;">
+                <h3 style="margin-top: 10px; font-size: 20px;">DANH SÁCH SẢN PHẨM</h3>
+                <div style="width: 75%;">
+                    <form method="GET" class="pull-right">
+                        <input class="form-control" name="query" id="timkiem" type="text" placeholder="Tìm kiếm" />
+                    </form>
+                </div>
+            </div>
+            <div class="tile-body">
                 <div class="row">
                     @foreach (var item in Model)
                     {
@@ -65,9 +75,9 @@
                                     </p>
                                     <p>
                                         <span class="badge bg-info" style="margin: 5px 0px 5px 0px;">
-                                            Số lượng còn lại: @item.TongTon 
+                                            Số lượng còn lại: @item.TongTon
                                         </span>
-                                        <span  style="margin: 5px 0px 5px 0px;">
+                                        <span style="margin: 5px 0px 5px 0px;">
                                             @*<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
                                                     Thêm
                                                 </button>*@
@@ -97,9 +107,35 @@
                         </div>
                     }
                 </div>
+                Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / @Model.PageCount
+                <div class="MenuTrang">
+                    @Html.PagedListPager(Model, page => Url.Action("PageSanPham", new { page, query = @TempData["timkiem"] }))
+                </div>
+                <style>
+                    .MenuTrang li {
+                        display: inline;
+                    }
+                </style>
             </div>
         </div>
     </div>
 </div>
 
+@*<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script>
+    $(document).on(function () {
+        $('#timkiem').on('input', function (event) {
+            event.preventDefault();
+            var formData = $(this).serialize();
+            $.ajax({
+                type: "GET",
+                url: $(this).attr('action'),
+                data: formData,
+                success: function (data) {
+                    $('#search-result').html(data);
+                }
+            })
+        })
+    })
+</script>*@
 
