--- a/Test02/Views/KinhDoanh/QuanLyDH.cshtml
+++ b/Test02/Views/KinhDoanh/QuanLyDH.cshtml
@@ -647,8 +647,8 @@
                 '</div>';
             $("#xoasp").prop('disabled', false);
             var div = document.getElementById("themdong");
-            div.innerHTML += row;
-
+            //div.innerHTML += row;
+            $("#themdong").append(row);
             console.log(i);
             $("#SoLuongSP").attr("value", i);
             //$("#btnadd").attr("action", "/KinhDoanh/ThemCTHD2/" + i);
@@ -667,7 +667,7 @@
             $("#SoLuongSP").attr("value", i);
             console.log("Đã xóa kiểm tra");
             $("#CongNo").attr("hidden", true);
-            $("#btnadd").attr("action", "/KinhDoanh/ThemCTHD2/" + i);
+            $("#btnadd").attr("action", "/KinhDoanh/ThemDH02/" + i);
         } else if (i = 0) {
             $("#xoasp").attr("disabled", "disabled");
 
