--- a/Test02/Views/KinhDoanh/ThemDL.cshtml
+++ b/Test02/Views/KinhDoanh/ThemDL.cshtml
@@ -65,14 +65,21 @@
                             @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                         </div>*@
-                    <div class="form-group  col-md-4">
+                    <div class="form-group  col-md-2">
                         <label class="control-label" for="MaLoaiDL">Tên đại lý</label>
                         <input class="form-control text-box single-line" id="TenDL" name="TenDL" required type="text">
                         <p style="color:red ;font-weight:bold" id="Error" hidden>Đang kiểm tra tên đại lý ....</p>
                         @Html.ValidationMessageFor(model => model.TenDL, "", new { @class = "text-danger" })
                         <div id="mess"></div>
                     </div>
-                    <div class="form-group col-md-4">
+                    <div class="form-group  col-md-3">
+                        <label class="control-label" for="MaLoaiDL">UserName</label>
+                        <input class="form-control text-box single-line" id="UserName" name="UserName" required type="text">
+                        <p style="color:red ;font-weight:bold" id="Error03" hidden>Đang kiểm tra UserName ....</p>
+                        @Html.ValidationMessageFor(model => model.TenDL, "", new { @class = "text-danger" })
+                        <div id="mess03"></div>
+                    </div>
+                    <div class="form-group col-md-3">
                         <label class="control-label" for="SDT">Số điện thoại</label>
                         @Html.EditorFor(model => model.SDT, new { htmlAttributes = new { @class = "form-control", type = "number", required = "true", id = "SDT",min=0 } })
                         @Html.ValidationMessageFor(model => model.SDT, "", new { @class = "text-danger" })
