--- a/Test02/Views/KhachHang/PageSanPham.cshtml
+++ b/Test02/Views/KhachHang/PageSanPham.cshtml
@@ -107,13 +107,94 @@
                         </div>
                     }
                 </div>
-                Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / @Model.PageCount
+                <div style="text-align:center;">
+                    Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / @Model.PageCount
+                </div>
                 <div class="MenuTrang">
                     @Html.PagedListPager(Model, page => Url.Action("PageSanPham", new { page, query = @TempData["timkiem"] }))
                 </div>
                 <style>
                     .MenuTrang li {
                         display: inline;
+                        width:30px;
+                        height:30px;
+                        text-align:center;
+                    }
+                    .MenuTrang ul{
+                        width:100%;
+                        text-align:center;
+                        justify-content:center;
+                    }
+                    .pagination {
+                        display: compact;
+                        padding-left: 0;
+                        margin: 0;
+                        border-radius: 4px;
+                    }
+
+                        .pagination > li {
+                            display: inline-grid;
+                        }
+
+                            .pagination > li > a,
+                            .pagination > li > span {
+                                position: relative;
+                                float: left;
+                                padding: 0;
+                                margin-left: -1px;
+                                line-height: 1.428571429;
+                                text-decoration: none;
+                                background-color: #eee;
+                                border: 1px solid #dddddd;
+                            }
+
+                            .pagination > li:first-child > a,
+                            .pagination > li:first-child > span {
+                                margin-left: 0;
+                                border-bottom-left-radius: 4px;
+                                border-top-left-radius: 4px;
+                            }
+
+                            .pagination > li:last-child > a,
+                            .pagination > li:last-child > span {
+                                border-top-right-radius: 4px;
+                                border-bottom-right-radius: 4px;
+                            }
+
+                            .pagination > li > a:hover,
+                            .pagination > li > span:hover,
+                            .pagination > li > a:focus,
+                            .pagination > li > span:focus {
+                                background-color: #eeeeee;
+                            }
+
+                        .pagination > .active > a,
+                        .pagination > .active > span,
+                        .pagination > .active > a:hover,
+                        .pagination > .active > span:hover,
+                        .pagination > .active > a:focus,
+                        .pagination > .active > span:focus {
+                            z-index: 2;
+                            color: #000;
+                            cursor: default;
+                            background-color: #428bca;
+                            border-color: #428bca;
+                        }
+
+                        .pagination > .disabled > span,
+                        .pagination > .disabled > a,
+                        .pagination > .disabled > a:hover,
+                        .pagination > .disabled > a:focus {
+                            color: #999999;
+                            cursor: not-allowed;
+                            background-color: #eee;
+                            border-color: #dddddd;
+                        }
+
+                    .pagination-lg > li > a,
+                    .pagination-lg > li > span {
+                        padding: 0;
+                        font-size: 18px;
                     }
                 </style>
             </div>
